# employe_payroll_tracker

./: README.md  main.py  pyproject.toml
src/employee_payroll_tracker/: main.py
src/employee_payroll_tracker/models/: contract.py  employee.py  fulltime.py  intern.py
src/employee_payroll_tracker/services/: payroll_service.py
src/employee_payroll_tracker/utils/: helpers.py  validators.py
src/employee_payroll_tracker/utils/menus/: add_employee_menu.py  main_menu.py
