[project]
name = "employee-payroll-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "JoeBright1619",email = "brightcollin1619@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "employee_payroll_tracker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
